--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,448 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap");
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+main {
+  display: block;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+hr {
+
+  height: 0;
+
+  overflow: visible;
+
+}
+
+span {
+  display: inline-block;
+}
+
+pre {
+  font-family: monospace, monospace;
+
+  font-size: 1em;
+
+}
+
+a {
+  text-decoration: none;
+}
+
+abbr[title] {
+  border-bottom: none;
+
+  text-decoration: underline;
+
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+
+  font-size: 1em;
+
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+  max-width: 100%;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+
+  font-size: 100%;
+
+  line-height: 1.15;
+
+  margin: 0;
+
+}
+
+ul,
+li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+button,
+input {
+
+  overflow: visible;
+}
+
+button,
+select {
+
+  text-transform: none;
+}
+
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+
+  color: inherit;
+
+  display: table;
+
+  max-width: 100%;
+
+  padding: 0;
+
+  white-space: normal;
+
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type=checkbox],
+[type=radio] {
+
+  padding: 0;
+
+}
+
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type=search] {
+  -webkit-appearance: textfield;
+
+  outline-offset: -2px;
+
+}
+
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+
+  font: inherit;
+
+}
+
+details {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+html,
+body {
+  font-family: "Raleway", sans-serif;
+  font-size: 40px;
+  height: 100%;
+  font-weight: 400;
+  background: -o-linear-gradient(342.97deg, #0F2027 3.27%, #203A43 42.3%, #2C5364 97.38%);
+  background: linear-gradient(107.03deg, #0F2027 3.27%, #203A43 42.3%, #2C5364 97.38%);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100%;
+}
+
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+
+.footer {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+
+.container {
+  max-width: 1230px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.header {
+  background-color: #FFC0CB;
+  margin-bottom: 30px;
+}
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form {
+  margin-bottom: 30px;
+}
+.form__main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 60px;
+}
+.form__input {
+  max-width: 743px;
+  width: 100%;
+  background: #FFFFFF;
+  border-radius: 15px;
+  padding: 10px;
+}
+.form__input::-webkit-input-placeholder {
+  line-height: 47px;
+  font-weight: 700;
+}
+.form__input::-moz-placeholder {
+  line-height: 47px;
+  font-weight: 700;
+}
+.form__input:-ms-input-placeholder {
+  line-height: 47px;
+  font-weight: 700;
+}
+.form__input::-ms-input-placeholder {
+  line-height: 47px;
+  font-weight: 700;
+}
+.form__input::placeholder {
+  line-height: 47px;
+  font-weight: 700;
+}
+.form__submit {
+  max-width: 240px;
+  width: 100%;
+  line-height: 47px;
+  padding: 10px;
+  background-color: #FFC0CB;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+.form__submit:hover {
+  background-color: #FFB52E;
+  color: #ffffff;
+}
+
+@media (max-width: 708px) {
+  .form__main {
+    display: block;
+  }
+
+  .form__input {
+    margin-bottom: 10px;
+  }
+
+  .form__submit {
+    max-width: 100%;
+  }
+}
+@media (max-width: 454px) {
+  .form__main {
+    font-size: 26px;
+  }
+
+  .form__input,
+.form__submit {
+    padding: 8px;
+  }
+
+  .form__submit {
+    line-height: 30px;
+  }
+}
+.photos__inner {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.photos__item {
+  max-width: 369px;
+  width: 100%;
+}
+.photos__content {
+  padding: 5px;
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-size: 20px;
+  line-height: 23px;
+}
+.photos__thumbs {
+  color: #FF4949;
+}
+.photos__avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.photos__spinner {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+@media (max-width: 799px) {
+  .photos__inner {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .photos__content {
+    font-size: 16px;
+  }
+}
+@media (max-width: 404px) {
+  .photos__inner {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.footer {
+  color: #ffffff;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  padding: 10px 0px;
+  background-color: #FFC0CB;
+  color: #000000;
+}
+
+@media (max-width: 450px) {
+  .footer {
+    font-size: 16px;
+  }
+}
+@media (max-width: 354px) {
+  .footer {
+    font-size: 12px;
+  }
 }
